<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.datai</groupId>
        <artifactId>datai-scene-salesforce</artifactId>
        <version>1.0.0</version>
    </parent>

    <artifactId>datai-salesforce-setting</artifactId>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.datai</groupId>
            <artifactId>datai-salesforce-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.datai</groupId>
            <artifactId>datai-cache-redis</artifactId>
            <version>${datai.version}</version>
        </dependency>
    </dependencies>

</project>